first commit & create README.md

--- a/home.html
+++ b/home.html
@@ -1,54 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Homepage</title>
+    <title>Jenoza Times</title>
     <link rel="shortcut icon" sizes="16x16 32x32 64x64" href="img/genre.jpeg" />
     <!-- it's for insert a icon in the tab -->
     <meta name="description" content="This is website" />
     <!-- it's a tag for express infos to
         Search engine like google -->
     <meta charset="utf-8" />
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+        height: 100vh;
+        align-items: center;
+        flex-direction: column;
+      }
+      div {
+        background-color: teal;
+        width: 200px;
+        height: 200px;
+      }
+    </style>
   </head>
   <body>
-    <!-- Anyway, search MDN for study!! -->
-    <form>
-      <!-- <label for="profile">Profile Photo</label>
-      <input id="profile" type="file" accept="image/*" />
-      if touch label(Profile Photo), input tag(with property accept) work
-            because, they partage id("profile")
-            So, label - input : is connected by value of id & for -->
-      <!-- useful propery in input:
-        required
-        minlength
-    -->
-      <!--
-          HTML ELEMENTS
-          https://developer.mozilla.org/en-US/docs/Web/HTML/Element
-        <div> : 다음줄로 넘어가는 박스
-        <span> : 짧은 text를 넣기 위한 박스
-        <p> : 문단
-        but, div 와 같은 역할을 하는 여러 태그 존재 - 코드만으로 해당 박스의 역할을 유추할수있음
-        => code semantic
-            - header
-            - main 
-            - footer
-     -->
-
-      <div>
-        <label for="first-name">Website</label>
-        <input id="first-name" required placeholder="First Name" type="date" />
-      </div>
-      <div>
-        <label for="second-name">Website</label>
-        <input
-          id="second-name"
-          required
-          placeholder="First Name"
-          type="email"
-        />
-      </div>
-
-      <input type="submit" value="create account" />
-    </form>
+    <div></div>
+    <span>please flip your phone:))</span>
   </body>
 </html>
