--- a/html_resume.html
+++ b/html_resume.html
@@ -17,16 +17,23 @@
             <h3>&#60TAG attribute_name(key)="value"&#62</h3>
           </li>
           <li><h3>MDN Toujours!!! - <a target="_blank" href="https://developer.mozilla.org/fr/docs/Web/HTML/Element">MDN ELEMENTS</a></h3></li>
-          <li><h3>Importance de coding de manière "semantic"</h3></li>
+          <li>
+            <h3>Importance de coding de manière "semantic"</h3>
+            <ul>
+                <li>&#60div&#62 : block</li>
+                <li>&#60span&#62 : inline</li>
+                <li><a target="_blank" href="https://developer.mozilla.org/en-US/docs/Glossary/Semantics">&#60semantic(section, article, address, nav, footer... etc)&#62</a> : Il y a toujours le sens qui désigne la signification du tag</li>
+            </ul>
+          </li>
         </ul>
       </header>
       <section>
           <h2>Exercice : JOIN Page</h2>
           <form>
-            <p>
+            <main>
                 <label for="email">Email :</label>
                 <input id="email" type="email" placeholder="Email à utiliser ici"/>
-            </p>
+            </main>
             <p>
                 <label for="password">Password :</label>
                 <input id="password" minlength="10" required="true" type="password" placeholder="Mot de passe"/>
@@ -60,7 +67,6 @@
       <footer>
         &copy; By Jeanoza with Nicolas :))
       </footer>
-
     </div>
   </body>
 </html>
