--- a/friends.html
+++ b/friends.html
@@ -158,9 +158,7 @@ https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Spinoza.jpg/520px-Spin
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="
-http://jfbradu.free.fr/GRECEANTIQUE/GRECE%20CONTINENTALE/ATHENES/socrate.jpg
-              "
+              src=" http://jfbradu.free.fr/GRECEANTIQUE/GRECE%20CONTINENTALE/ATHENES/socrate.jpg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
