modifier friends.html :before branch

--- a/friends.html
+++ b/friends.html
@@ -63,7 +63,7 @@ https://www.ancient.eu/img/r/p/500x600/12436.jpg.avif?v=1608312605
 
     <a id="friends-display-link">
       <i class="fas fa-info-circle"></i>
-      Déployer les prénoms des amis
+      Déployer les noms des amis
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
@@ -94,9 +94,7 @@ https://www.ancient.eu/img/r/p/500x600/12436.jpg.avif?v=1608312605
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="
-https://assets.lls.fr/pages/7384489/FRA.2de.Ch16.TEX.Photographie_Simone-de-Beauvoir.png
-              "
+              src="https://assets.lls.fr/pages/7384489/FRA.2de.Ch16.TEX.Photographie_Simone-de-Beauvoir.png"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
