--- a/friends.html
+++ b/friends.html
@@ -81,79 +81,15 @@ https://www.ancient.eu/img/r/p/500x600/12436.jpg.avif?v=1608312605
             </h6>
           </div>
         </div>
-        <div class="user-component__column user-component__column--book">
-          <span> L'Être et le Néant</span>
-          <i class="fas fa-caret-square-right"></i>
+        <div class="user-component__column">
+          <!-- <span> L'Être et le Néant</span>
+          <i class="fas fa-caret-square-right"></i> -->
         </div>
       </div>
-      <div class="friends-screen__favoris">
-        <div class="friends-screen__favoris-header">
-          <span>Favoris</span>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>Channel</span>
           <i class="fas fa-chevron-up fa-xs"></i>
-        </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="
-https://assets.lls.fr/pages/7384489/FRA.2de.Ch16.TEX.Photographie_Simone-de-Beauvoir.png
-              "
-              class="user-component__avatar user-component__avatar--sm"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">
-                Castor
-              </h4>
-              <h6 class="user-component__subtitle">
-                On ne naît pas femme, on le devient.
-              </h6>
-            </div>
-          </div>
-          <div class="user-component__column user-component__column--book">
-            <span>Le deuxième sexe</span>
-            <i class="fas fa-caret-square-right"></i>
-          </div>
-        </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="https://api.theatredelaville-paris.com/assets/w1500-h1500-q80/c40d489e/albert_camus.jpg "
-              class="user-component__avatar user-component__avatar--sm"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">
-                Camus
-              </h4>
-              <h6 class="user-component__subtitle">
-                Aujourd'hui, maman est morte...
-              </h6>
-            </div>
-          </div>
-          <div class="user-component__column user-component__column--book">
-            <span>L'Étranger</span>
-            <i class="fas fa-caret-square-right"></i>
-          </div>
-        </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="
-https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Spinoza.jpg/520px-Spinoza.jpg
-              "
-              class="user-component__avatar user-component__avatar--sm"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">
-                Spinoza
-              </h4>
-              <h6 class="user-component__subtitle">
-                vera religio e vana religio
-              </h6>
-            </div>
-          </div>
-          <div class="user-component__column user-component__column--book">
-            <span>Etika</span>
-            <i class="fas fa-caret-square-right"></i>
-          </div>
         </div>
         <div class="user-component">
           <div class="user-component__column">
@@ -163,16 +99,14 @@ https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Spinoza.jpg/520px-Spin
             />
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">
-                Socrate
+                Channel
               </h4>
-              <h6 class="user-component__subtitle">
-                Je sais que je ne sais rien
-              </h6>
+              <!-- <h6 class="user-component__subtitle"> </h6> -->
             </div>
           </div>
-          <div class="user-component__column user-component__column--book">
-            <span>La République by Platon</span>
-            <i class="fas fa-caret-square-right"></i>
+          <div class="user-component__column">
+            <span>2</span>
+            <i class="fas fa-chevron-right fa-xs"></i>
           </div>
         </div>
       </div>
