--- a/friends.html
+++ b/friends.html
@@ -81,10 +81,7 @@ https://www.ancient.eu/img/r/p/500x600/12436.jpg.avif?v=1608312605
             </h6>
           </div>
         </div>
-        <div class="user-component__column">
-          <!-- <span> L'Être et le Néant</span>
-          <i class="fas fa-caret-square-right"></i> -->
-        </div>
+        <div class="user-component__column"></div>
       </div>
       <div class="friends-screen__channel">
         <div class="friends-screen__channel-header">
@@ -101,7 +98,6 @@ https://www.ancient.eu/img/r/p/500x600/12436.jpg.avif?v=1608312605
               <h4 class="user-component__title user-component__title--not-bold">
                 Channel
               </h4>
-              <!-- <h6 class="user-component__subtitle"> </h6> -->
             </div>
           </div>
           <div class="user-component__column">
