add animation & media query

--- a/chat.html
+++ b/chat.html
@@ -47,7 +47,7 @@
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Vendredi, 1er Janvier, 2021</div>
 
-      <div class="message-row message-row--own">
+      <div class="message-row message-row--own" id="_1">
         <div class="message-row__content">
           <div class="message__info">
             <span class="message__bubble">Hi, Monsieur. Que savez-vous?</span>
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <div class="message-row">
+      <div class="message-row" id="_2">
         <img
           src="https://www.wikiberal.org/images/e/eb/Socrate.htm_asc001.jpg"
         />
@@ -69,7 +69,7 @@
         </div>
       </div>
 
-      <div class="message-row message-row--own">
+      <div class="message-row message-row--own" id="_3">
         <div class="message-row__content">
           <div class="message__info">
             <span class="message__bubble">...</span>
@@ -91,6 +91,9 @@
         </button>
       </div>
     </form>
+    <div id="no-mobile">
+      <span>Votre fenêtre est trop grande. Veuillez la diminuer.</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
