--- a/friends.html
+++ b/friends.html
@@ -138,7 +138,12 @@ https://www.ancient.eu/img/r/p/500x600/12436.jpg.avif?v=1608312605
         </li>
       </ul>
     </nav>
-
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+    <div id="no-mobile">
+      <span>Votre fenêtre est trop grande. Veuillez la diminuer.</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
