--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       <input type="submit" value="Me connecter" />
       <a href="#">Mot de passe oublié</a>
     </form>
+    <div id="no-mobile">
+      <span>Votre fenêtre est trop grande. Veuillez la diminuer.</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
