--- a/settings.html
+++ b/settings.html
@@ -94,6 +94,9 @@
       </ul>
     </nav>
 
+    <div id="no-mobile">
+      <span>Votre fenêtre est trop grande. Veuillez la diminuer.</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
