philosophe-talk version 1.0

--- a/find.html
+++ b/find.html
@@ -57,7 +57,23 @@
       </div>
       <div class="recommended-friends">
         <h6 class="recommended-friends__title">Amis recommandés</h6>
-        <span>Vous n'avez pas d'amis recommandé</span>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://pbs.twimg.com/profile_images/1308812357502668812/jSVlszOa_400x400.jpg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Emmanuel Macron
+              </h4>
+              <h6 class="user-component__subtitle">
+                Président de la République
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column"></div>
+        </div>
         <!-- TODO : Add Laotseu ChouangTseu...  -->
       </div>
       <div class="open-chat">
@@ -70,7 +86,7 @@
         </div>
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#PHENOMENOLOGIE</h5>
+            <h5 class="open-post__title">Phénomenologie</h5>
             <h6 class="open-post__hashtags">#descartes#hurssel#heidegger</h6>
             <div class="open-post__members">
               <img
@@ -92,6 +108,30 @@
             </div>
           </div>
         </div>
+        <div class="open-post">
+          <div class="open-post__column">
+            <h5 class="open-post__title">Taoïsme</h5>
+            <h6 class="open-post__hashtags">#Lao-Tseu#Tchouang-Tseu</h6>
+            <div class="open-post__members">
+              <img
+                src="https://media.senscritique.com/media/000009498147/150_200/Tchouang_Tseu.jpg"
+              />
+              <span class="open-post__member-count">1,65B members</span>
+              <div class="divider"></div>
+              <span class="open-post__member-status">Active</span>
+            </div>
+          </div>
+          <div class="open-post__column">
+            <div class="open-post__photo">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Lao_Tzu_-_Project_Gutenberg_eText_15250.jpg"
+              />
+              <div class="open-post__heart-count">
+                <i class="fas fa-heart fa-xs"></i><span>326</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <nav class="nav">
@@ -103,7 +143,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">3</span>
             <i class="far fa-comment fa-2x"></i
           ></a>
         </li>
