--- a/more.html
+++ b/more.html
@@ -78,15 +78,20 @@
         <div class="more-suggestions__icons">
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <img
+                class="stop-covid"
+                src="https://www.montauban-de-bretagne.fr/medias/2020/06/StopCovid_Logo.png"
+              />
             </div>
-            <div class="more-suggestions__icon-text">Kakao Story</div>
+            <div class="more-suggestions__icon-text">Stop-Covid</div>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <img
+                src="https://freepngimg.com/thumb/starbucks/24384-3-starbucks-logo-file.png"
+              />
             </div>
-            <div class="more-suggestions__icon-text">Kakao Friends</div>
+            <div class="more-suggestions__icon-text">Starbucks</div>
           </div>
         </div>
       </div>
@@ -101,7 +106,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">3</span>
             <i class="far fa-comment fa-2x"></i
           ></a>
         </li>
