--- a/chat.html
+++ b/chat.html
@@ -50,7 +50,10 @@
       <div class="message-row message-row--own" id="_1">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">Hi, Monsieur. Que savez-vous?</span>
+            <span class="message__bubble"
+              >Bonjour, mon grand philosophe. J'ai une question.<br />Que
+              savez-vous?</span
+            >
             <span class="message__time">21:27</span>
           </div>
         </div>
@@ -77,6 +80,7 @@
           </div>
         </div>
       </div>
+      <div class="chat__timestamp" id="_4">Sartre est parti(e).</div>
     </main>
 
     <form action="" class="reply">
