--- a/chats.html
+++ b/chats.html
@@ -46,12 +46,48 @@
               class="user-component__avatar"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">Channel</h4>
-              <h6 class="user-component__subtitle">Connais-toi toi-même.</h6>
+              <h4 class="user-component__title">Socrate</h4>
+              <h6 class="user-component__subtitle">Je sais...</h6>
             </div>
           </div>
           <div class="user-component__column">
             <span class="user-component__time">09:16</span>
+            <div class="badge">1</div>
+          </div>
+        </div>
+      </a>
+      <a href="#">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://ccweb.imgix.net/https%3A%2F%2Fccweb.imgix.net%2Fhttps%253A%252F%252Fd3f1iyfxxz8i1e.cloudfront.net%252Fcourses%252Fcourse_image%252F65cc4ead25a0.jpg%3Fauto%3Dformat%26cs%3Dstrip%26fit%3D%26h%3D710%26ixlib%3Dphp-3.3.0%26w%3D400%26s%3D75fa3cc36dd878a66fd6e4e7a1682daa?auto=format&ixlib=php-3.3.0&s=19da87d6bfe720f90b75b4463f0088d8"
+              class="user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Aristote</h4>
+              <h6 class="user-component__subtitle">NOPE, la Vertu est ici.</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">22:16</span>
+            <div class="badge">1</div>
+          </div>
+        </div>
+      </a>
+      <a href="#">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/b/b4/Platon.jpg"
+              class="user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Platon</h4>
+              <h6 class="user-component__subtitle">La Vertu est là-bas.</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">22:15</span>
             <div class="badge">1</div>
           </div>
         </div>
@@ -67,7 +103,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">3</span>
             <i class="fas fa-comment fa-2x"></i
           ></a>
         </li>
