--- a/friends.html
+++ b/friends.html
@@ -198,10 +198,10 @@
         class="splash-screen__img"
         src="https://www.philomag.com/sites/default/files/styles/header_no_full_width/public/images/phi.jpg"
       />
-      <div class="philos-talk">
-        <!-- <span>Philo</span>
-        <span>TALK</span> -->
-      </div>
+      <!-- <div class="philos-talk">
+        <span>Philos</span>
+        <span>TALK</span>
+      </div> -->
     </div>
     <div id="no-mobile">
       <span>Votre fenêtre est trop grande. Veuillez la diminuer.</span>
