--- a/practice/html_resume.html
+++ b/practice/html_resume.html
@@ -7,8 +7,13 @@
       href="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg"
     />
     <title>HTML Résumé</title>
+    <style>
+      #wesh{
+        margin:100px 100px;
+      }
+    </style>
   </head>
-  <body>
+  <body id="wesh">
     <div class="container">
       <h1>HTML Résumé</h1>
       <header>
