js-clock add to all html

--- a/find.html
+++ b/find.html
@@ -13,7 +13,7 @@
         <i class="fas fa-wifi"></i>
         <!-- Wifi Icon By fontawesome-->
       </div>
-      <div class="status-bar__column">
+      <div class="status-bar__column js-clock">
         <span>03:19</span>
       </div>
       <div class="status-bar__column">
@@ -164,6 +164,7 @@
       <span>Votre fenêtre est trop grande. Veuillez la diminuer.</span>
     </div>
 
+    <script src="js/js-clock.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
