--- a/more.html
+++ b/more.html
@@ -13,7 +13,7 @@
         <i class="fas fa-wifi"></i>
         <!-- Wifi Icon By fontawesome-->
       </div>
-      <div class="status-bar__column">
+      <div class="status-bar__column js-clock">
         <span>03:19</span>
       </div>
       <div class="status-bar__column">
@@ -127,6 +127,7 @@
     <div id="no-mobile">
       <span>Votre fenêtre est trop grande. Veuillez la diminuer.</span>
     </div>
+    <script src="js/js-clock.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
