gitignore modify : exclude practice folder

--- a/practice/challenge_day4.html
+++ b/practice/challenge_day4.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge_day</title>
     <style>
-      ul {
-        padding-left: 0px;
-        margin: 0px;
-      }
-      li {
-        list-style: none;
+      .test {
+        co
       }
     </style>
   </head>
