add animation on chats

--- a/chats.html
+++ b/chats.html
@@ -39,7 +39,7 @@
 
     <main class="main-screen chats-screen">
       <a href="chat.html">
-        <div class="user-component">
+        <div class="user-component chats-screen__socrate">
           <div class="user-component__column">
             <img
               src="https://www.wikiberal.org/images/e/eb/Socrate.htm_asc001.jpg"
@@ -51,13 +51,13 @@
             </div>
           </div>
           <div class="user-component__column">
-            <span class="user-component__time">09:16</span>
+            <span class="user-component__time">22:17</span>
             <div class="badge">1</div>
           </div>
         </div>
       </a>
       <a href="#">
-        <div class="user-component">
+        <div class="user-component chats-screen__platon">
           <div class="user-component__column">
             <img
               src="https://ccweb.imgix.net/https%3A%2F%2Fccweb.imgix.net%2Fhttps%253A%252F%252Fd3f1iyfxxz8i1e.cloudfront.net%252Fcourses%252Fcourse_image%252F65cc4ead25a0.jpg%3Fauto%3Dformat%26cs%3Dstrip%26fit%3D%26h%3D710%26ixlib%3Dphp-3.3.0%26w%3D400%26s%3D75fa3cc36dd878a66fd6e4e7a1682daa?auto=format&ixlib=php-3.3.0&s=19da87d6bfe720f90b75b4463f0088d8"
@@ -75,7 +75,7 @@
         </div>
       </a>
       <a href="#">
-        <div class="user-component">
+        <div class="user-component chats-screen__aristote">
           <div class="user-component__column">
             <img
               src="https://upload.wikimedia.org/wikipedia/commons/b/b4/Platon.jpg"
