--- a/chats.html
+++ b/chats.html
@@ -120,10 +120,9 @@
         </li>
       </ul>
     </nav>
-    <div id="no-mobile">
-      <span>Votre fenêtre est trop grande. Veuillez la diminuer.</span>
-    </div>
-
+    <div id="no-mobile"></div>
+    <div>Votre fenêtre est trop grande.</div>
+    <div>Son largeur ne doit pas dépasser 600px</div>
     <script src="js/js-clock.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
