--- a/friends.html
+++ b/friends.html
@@ -194,17 +194,20 @@
     </nav>
     <div id="splash-screen">
       <!-- <i class="fas fa-comment"></i> -->
-      <img
+      <!-- <img
         class="splash-screen__img"
         src="https://www.philomag.com/sites/default/files/styles/header_no_full_width/public/images/phi.jpg"
-      />
-      <!-- <div class="philos-talk">
-        <span>Philos</span>
-        <span>TALK</span>
-      </div> -->
+      /> -->
+      <span>E</span>
+      <span>U</span>
+      <span>R</span>
+      <span>E</span>
+      <span>K</span>
+      <span>A</span>
     </div>
     <div id="no-mobile">
-      <span>Votre fenêtre est trop grande. Veuillez la diminuer.</span>
+      <div>Votre fenêtre est trop grande.</div>
+      <div>Son largeur ne doit pas dépasser 600px</div>
     </div>
     <script src="js/js-clock.js"></script>
     <script
