--- a/more.html
+++ b/more.html
@@ -76,23 +76,30 @@
       <div class="more-suggestions">
         <h4 class="more-suggestions__title">Suggesitons</h4>
         <div class="more-suggestions__icons">
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
-              <img
-                class="stop-covid"
-                src="https://www.montauban-de-bretagne.fr/medias/2020/06/StopCovid_Logo.png"
-              />
+          <a
+            href="https://www.gouvernement.fr/info-coronavirus/tousanticovid"
+            target="_blank"
+          >
+            <div class="more-suggestions__icon">
+              <div class="more-suggestions__icon-image">
+                <img
+                  class="stop-covid"
+                  src="https://www.montauban-de-bretagne.fr/medias/2020/06/StopCovid_Logo.png"
+                />
+              </div>
+              <div class="more-suggestions__icon-text">Stop-Covid</div>
             </div>
-            <div class="more-suggestions__icon-text">Stop-Covid</div>
-          </div>
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
-              <img
-                src="https://freepngimg.com/thumb/starbucks/24384-3-starbucks-logo-file.png"
-              />
+          </a>
+          <a href="https://www.starbucks.fr/" target="_blank">
+            <div class="more-suggestions__icon">
+              <div class="more-suggestions__icon-image">
+                <img
+                  src="https://freepngimg.com/thumb/starbucks/24384-3-starbucks-logo-file.png"
+                />
+              </div>
+              <div class="more-suggestions__icon-text">Starbucks</div>
             </div>
-            <div class="more-suggestions__icon-text">Starbucks</div>
-          </div>
+          </a>
         </div>
       </div>
     </main>
@@ -125,7 +132,8 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Votre fenêtre est trop grande. Veuillez la diminuer.</span>
+      <div>Votre fenêtre est trop grande.</div>
+      <div>Son largeur ne doit pas dépasser 600px</div>
     </div>
     <script src="js/js-clock.js"></script>
     <script
