--- a/settings.html
+++ b/settings.html
@@ -53,7 +53,7 @@
         <li class="settings__setting">
           <div class="settings__setting-column">
             <i class="fas fa-flask"></i>
-            <span>Kakao Lab</span>
+            <span>Philotalk Lab</span>
           </div>
           <div class="settings__setting-column"></div>
         </li>
@@ -95,7 +95,8 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Votre fenêtre est trop grande. Veuillez la diminuer.</span>
+      <div>Votre fenêtre est trop grande.</div>
+      <div>Son largeur ne doit pas dépasser 600px</div>
     </div>
     <script src="js/js-clock.js"></script>
     <script
