--- a/chat.html
+++ b/chat.html
@@ -96,7 +96,8 @@
       </div>
     </form>
     <div id="no-mobile">
-      <span>Votre fenêtre est trop grande. Veuillez la diminuer.</span>
+      <div>Votre fenêtre est trop grande.</div>
+      <div>Son largeur ne doit pas dépasser 600px</div>
     </div>
     <script src="js/js-clock.js"></script>
     <script
