--- a/find.html
+++ b/find.html
@@ -161,7 +161,8 @@
       </ul>
     </nav>
     <div id="no-mobile">
-      <span>Votre fenêtre est trop grande. Veuillez la diminuer.</span>
+      <div>Votre fenêtre est trop grande.</div>
+      <div>Son largeur ne doit pas dépasser 600px</div>
     </div>
 
     <script src="js/js-clock.js"></script>
