--- a/practice/challenge_day4.html
+++ b/practice/challenge_day4.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge_day</title>
-    <style>
-      .test {
-        co
-      }
-    </style>
+    <style></style>
   </head>
   <body>
     <h1>Create An Account</h1>
